--- a/css/workskillsstyles.css
+++ b/css/workskillsstyles.css
@@ -1,3 +1,5 @@
+@import 'variables_fuentes_color_bordes.css';
+
 /* Estilo para la sección de habilidades */
 .section-skills {
   padding: 9rem 1rem;
@@ -88,7 +90,7 @@
 
 
 /* Corrección de desbordamiento en el iframe */
-.iframe-container {
+.container__iframe {
   background-color: inherit;
   /* Color de fondo opcional */
   border-radius: 8px;
@@ -96,19 +98,20 @@
   box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
   /* Sombra opcional */
 
-  max-width: 800px;
+  max-width: 200em;
+  min-width: 50em;
   overflow: hidden;
-  padding-bottom: 56.25%;
   /* Proporción 16:9 */
   position: relative;
   width: 90%;
-
+  justify-content: space-between;
 }
 
-.iframe-container iframe {
+.bi__iframe {
   border: none;
-  left: 70px;
-  position: absolute;
+  flex: 2;
+  height: 100%;
+
 
 }
 
@@ -127,7 +130,7 @@
 }
 
 .social-link {
-  padding: 0.5rem;
+  padding: var(--size1em);
 }
 
 .social-icon {
@@ -197,36 +200,37 @@
 /************* WORKS SECTION **************/
 /* Estilo para la sección de trabajos */
 /* Estilo para la sección de trabajos */
-.section-works {
+.section__works {
   transition: all 0.4s;
 }
 
 /* Contenedor de trabajos */
-.works-container {
+.works__container {
   margin: 2rem 6rem;
-  width: 100%;
+  width: 90%;
   display: flex;
   flex-wrap: wrap;
-  gap: 4rem;
+  gap: 3rem;
+  max-width: max-content;
+  min-width: 50px;
 }
 
 /* Estilo para cada trabajo */
 .work {
   align-items: center;
   background: linear-gradient(18deg, rgba(4, 37, 78, 1) 3%, rgb(01, 25, 216, 0.2) 20%, rgba(4, 37, 78, 1) 60%, rgb(1, 14, 18, 0.2));
-  ;
   border-radius: var(--border-radius-sm);
   color: var(--color-primary);
   display: flex;
   flex-direction: column;
-  gap: .2rem;
+  gap: 2rem;
 
 
   /* Asegura que los elementos hijos se estiren uniformemente */
 }
 
 /* Título del trabajo */
-.work-title {
+.work__title {
   color: var(--color-primary);
   text-align: center;
   font-size: 1.5rem;
@@ -234,20 +238,44 @@
 }
 
 /* Imagen del trabajo */
-.work-img {
-  width: 450px;
-  max-width: 88%;
+.work__img {
+  width: 350px;
+  max-width: 90%;
 
 }
 
 /* Descripción del trabajo */
-.work-description {
+.work__description {
   color: var(--color-secondary);
   text-align: justify;
-  width: 92%;
-  max-width: 350px;
+  width: 90%;
+  max-width: 300px;
   padding: 1rem;
 }
 
 
-/* Contenedor de habilidades del trabajo */
+
+
+.container__bi {
+  margin: 2rem 6rem;
+  width: 100%;
+  display: flex;
+  flex-wrap: wrap;
+  gap: 4rem;
+  max-width: max-content;
+  min-width: 50px;
+}
+
+/* Estilo para cada trabajo
+.container__bi {
+  align-items: center;
+  border-radius: var(--border-radius-sm);
+  color: var(--color-primary);
+  display: flex;
+  flex-direction: column;
+  gap: .2rem;
+
+
+  /* Asegura que los elementos hijos se es
+} 
+tiren uniformemente */
