--- a/html/work/wstyle.css
+++ b/html/work/wstyle.css
@@ -77,7 +77,7 @@ a {
 h1 {
     position: relative;
     text-align: center;
-    font-size: 6vw;
+    font-size: 4em;
     font-weight: 300;
     letter-spacing: -0.05em;
     text-transform: uppercase;
