--- a/css/movimiento_skills_and_animation.css
+++ b/css/movimiento_skills_and_animation.css
@@ -1,4 +1,5 @@
 #movimiento_skills {
+  
     background-image: url('./images/logo.webp');
     background-size: cover;
     border-radius: 20%;
@@ -6,6 +7,7 @@
     perspective: 1000px;
     text-align: center;
     justify-content: center;
+    width: calc(33.33% - 20px);
 }
 
 .movimiento_skills-container {
@@ -28,7 +30,7 @@
 
 .movimiento_skills-grid-skill {
     position: absolute;
-
+    max-width: calc(50% - 10px);
     transition: transform 0.3s;
     transform-style: preserve-3d;
 }
@@ -37,6 +39,8 @@
 .movimiento_skills-grid-skill img {
     width: 30px;
     height: 30px;
+    max-width: 50px;
+    min-width: 10px;
 
 }
 
@@ -67,3 +71,26 @@
     background-color: var(--color-primary);
 }
 
+
+
+
+
+
+
+/* ANIMATION */
+
+.slide-left {
+  animation: slideleft 1s linear forwards;
+}
+
+@keyframes slideleft {
+  0% {
+    transform: translate(10rem);
+    opacity: 0;
+  }
+
+  100% {
+    transform: translate(0);
+    opacity: 1;
+  }
+}
